tests/ui/g-message-without-wire-contract.stderr
error[E0277]: the trait bound `NoWireContract: WireEncode` is not satisfied
 --> tests/ui/g-message-without-wire-contract.rs:6:29
  |
6 |     let _ = g::send::<0, 1, g::Msg<31, NoWireContract>>();
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `WireEncode` is not implemented for `NoWireContract`
 --> tests/ui/g-message-without-wire-contract.rs:3:1
  |
3 | struct NoWireContract;
  | ^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `WireEncode`:
            &[u8]
            ()
            [u8; N]
            bool
            i128
            i16
            i32
            i64
          and $N others
note: required by a bound in `send`
 --> src/g.rs
  |
  | pub const fn send<const FROM: u8, const TO: u8, M>() -> Program<Send<FROM, TO, M>>
  |              ---- required by a bound in this function
...
  |     M::Payload: crate::transport::wire::WireEncode + crate::transport::wire::WirePayload,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `send`

error[E0277]: the trait bound `NoWireContract: WirePayload` is not satisfied
 --> tests/ui/g-message-without-wire-contract.rs:6:29
  |
6 |     let _ = g::send::<0, 1, g::Msg<31, NoWireContract>>();
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `WirePayload` is not implemented for `NoWireContract`
 --> tests/ui/g-message-without-wire-contract.rs:3:1
  |
3 | struct NoWireContract;
  | ^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `WirePayload`:
            &[u8]
            ()
            [u8; N]
            bool
            i128
            i16
            i32
            i64
          and $N others
note: required by a bound in `send`
 --> src/g.rs
  |
  | pub const fn send<const FROM: u8, const TO: u8, M>() -> Program<Send<FROM, TO, M>>
  |              ---- required by a bound in this function
...
  |     M::Payload: crate::transport::wire::WireEncode + crate::transport::wire::WirePayload,
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `send`
